# black-hole

./: Cargo.toml  black-hole.exr
src/: app.rs  gui.rs  image.rs  input.rs  main.rs  pathtrace.wgsl  postprocess.wgsl  render.rs  state.rs  types.rs
