[package]
name = "black-hole"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "24.0.1", features = ["vulkan-portability"] }
image = "0.25.5"

pollster = "0.4.0"
flume = "0.11.1"
glam = { version = "0.30.0", features = ["bytemuck"] }
bytemuck = { version = "1.21.0", features = ["derive"] }
once_cell = "1.20.2"
fastrand = "2.3.0"
