[package]
name = "black-hole"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "24.0.1", features = ["vulkan-portability"] }
egui = "0.31.1"
egui-wgpu = { version = "0.31.1", features = ["winit"] }
egui-winit = "0.31.1"
winit = "0.30.8"
image = "0.25.5"

pollster = "0.4.0"
glam = { version = "0.30.0", features = ["bytemuck"] }
bytemuck = "1.21.0"
once_cell = "1.20.2"
fastrand = "2.3.0"
